force-app/main/default/objects/Contact/fields/Contact_Text__c.field-meta.xml
<CustomField>
    <fullName>Contact_Text__c</fullName>
    <label>Contact Text</label>
    <length>254</length>
    <type>Text</type>
</CustomField>