force-app/main/default/objects/Contact/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <description>Added some description</description>
    <displayFormat>A-{0000}</displayFormat>
    <label>test</label>
    <type>AutoNumber</type>
</CustomField>