force-app/main/default/objects/Contact/fields/Text_Only_Field__c.field-meta.xml
<CustomField>
    <fullName>Text_Only_Field__c</fullName>
    <label>Text Only Field</label>
    <length>254</length>
    <type>Text</type>
</CustomField>